--- a/VLaboralWeb/css/styles.css
+++ b/VLaboralWeb/css/styles.css
@@ -4,6 +4,25 @@
 
 ::selection { background-color: rgba(81, 202, 245, 0.7); color: whitesmoke; }
 
+.notif { height: 100vh; width: 100%; display: flex; flex-flow: wrap row; justify-content: center; align-items: center; }
+.notif .noti_box { display: flex; flex-flow: wrap row; justify-content: center; align-items: flex-start; height: 80vh; background: #ebebeb; }
+.notif .noti_box .n_centro { display: flex; flex-flow: wrap column; justify-content: flex-start; align-items: center; height: 100%; background: whitesmoke; }
+.notif .noti_box .n_centro h1 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.8em; color: #1e1e23; width: 100%; text-align: center; background: whitesmoke; }
+.notif .noti_box .n_centro h2 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1em; color: #1e1e23; width: 100%; text-align: center; background: whitesmoke; }
+.notif .noti_box .n_centro .notis { display: flex; flex-flow: wrap row; justify-content: space-between; align-items: center; padding: 1em; background: #03a9f4; border: 1px solid #dadada; border-top: none; }
+.notif .noti_box .n_centro .notis img { width: 3.6em; border-radius: 100%; }
+.notif .noti_box .n_centro .notis .notis_info { display: flex; flex-flow: wrap row; justify-content: space-between; align-items: center; }
+.notif .noti_box .n_centro .notis .notis_info .ni1 { margin: 0 1em; }
+.notif .noti_box .n_centro .notis .notis_info .ni1 h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #f0f0f0; }
+.notif .noti_box .n_centro .notis .notis_info .ni1 h4 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1em; color: #f0f0f0; }
+.notif .noti_box .n_centro .notis .notis_info .ni2 h5 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #f0f0f0; }
+.notif .noti_box .n_centro .notis .notis_info .ni2 a { text-decoration: none; display: block; text-align: right; }
+.notif .noti_box .n_centro .notis .notis_info .ni2 a span { color: #5a5a5f; font-size: 0.8em; transition: all 0.2s ease-out; }
+.notif .noti_box .n_centro .notis .notis_info .ni2 a span:hover { color: #323232; }
+.notif .noti_box .n_detalle { display: flex; flex-flow: wrap column; justify-content: center; align-items: stretch; min-width: 500px; }
+.notif .noti_box .n_detalle h1 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.8em; color: #1e1e23; text-align: center; }
+.notif .noti_box .n_detalle .detalle_cont { width: 500px; padding: 3em 2em; }
+
 .home { background: url(../img/ny_street.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; height: 100vh; display: flex; flex-flow: wrap column; justify-content: center; align-items: center; }
 .home header { display: flex; padding: 0.3em; width: 100%; position: fixed; flex-flow: wrap row; justify-content: space-between; align-items: center; position: absolute; top: 0; }
 .home header ul { list-style: none; }
@@ -126,7 +145,7 @@ aside .p_info .t_info h5 { font-family: 'Lato', sans-serif; font-weight: 300; fo
 .menu_s ul a li span { margin-right: 1em; color: #77da55; }
 .menu_s ul a li:hover { color: #f0f0f0; background: rgba(100, 100, 100, 0.1); }
 
-main { padding: 3.7em 0; }
+main { padding: 5.5em 2em 1em 18%; }
 main h1 { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1.9em; color: #5a5a5f; margin-bottom: 1em; }
 main h3 { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1.4em; color: #5a5a5f; }
 main .ofer_tit { width: 60%; padding: 0.6em 0.5em; border: 1px solid #b4b4b4; font-family: 'Montserrat', sans-serif; font-weight: 400; font-size: 1em; color: #323232; transition: all 0.3s ease; border-radius: 2px; margin: 1em 0 1em; }
@@ -135,7 +154,7 @@ main .ofer_tit:hover { border-color: #3e8abb; }
 main .ofer_desc { width: 60%; }
 main select { padding: 0.5em; font-family: 'Montserrat', sans-serif; font-weight: 400; font-size: 1.1em; color: #323232; }
 main select option { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1em; color: #323232; }
-main h2 { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1.2em; color: #5a5a5f; display: inline-block;margin:1em 0; }
+main h2 { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1.2em; color: #5a5a5f; display: inline-block; }
 
 .lrg { margin: 2em 0; }
 
@@ -182,92 +201,13 @@ main h2 { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1.
 
 .puestos h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 3em; color: #1e1e23; margin-bottom: 0.7em; }
 
-.puestos_box { background: white; padding: 2em 1em; border: 1px solid #e6e6e6; }
+.puestos_box { background: white; padding: 2em 1em; border: 1px solid #e6e6e6; margin-top: 2em; }
 .puestos_box h2 { font-family: 'Lato', sans-serif; font-weight: 700; font-size: 1.8em; color: #1e1e23; margin-bottom: 0.7em; }
 .puestos_box h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #1e1e23; margin-bottom: 2em; text-align: center; }
 .puestos_box .p_items { width: 100%; }
 .puestos_box .p_items h4 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.1em; color: #1e1e23; margin-bottom: 0.7em; }
 .puestos_box .p_items h4 span { font-weight: 700; font-size: 0.95em; color: #3c3c3c; }
 .puestos_box .p_items .va { background-color: #3e8abb; color: #f0f0f0; padding: 0.2em 0.4em 0.3em; border-radius: 10px; }
+.puestos_box .p_items .etiquetas { background: #e1e1e1; border-radius: 16px; padding: 3px 10px; font-weight: 400; }
 
-/*table { display: block; width: 60.5%; margin: 0 auto 1em; border-collapse: collapse; }*/
-table tr:nth-child(even) { background-color: #e1e1e1; }
-table tr td { text-align: center; padding: 0.6em; font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1em; color: #38383c; }
-table tr .puesto { background: #27ae60; font-weight: 700; color: #d2d2d2; border-bottom: 1px solid #2ecc71; }
-
-.t_me_a{
-    font-family: 'Lato', sans-serif; font-weight: 700; font-size: 1.4em; color: rgb(70,70,70);margin-left:0.5em;
-}
-
-.ic_m{
-    color:rgb(160,160,160);
-    font-size: 1.7em;
-}
-.ic_m:hover { color: #3498db; }
-.sm{
-    color:rgb(70,70,70);
-}
-
-/* CREAR OFERTAS*/
-
-.of_ad{
-    padding:1em 3%;
-}
-
-.timeline { position: relative; width: 660px; margin: 0 auto; margin-top: 20px; padding: 1em 0; list-style-type: none; }
-
-.timeline:before { position: absolute; left: 50%; top: 0; content: ' '; display: block; width: 6px; height: 100%; margin-left: -3px; background: #505050; background: -moz-linear-gradient(top, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1e5799), color-stop(100%, #7db9e8)); background: -webkit-linear-gradient(top, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%); background: -o-linear-gradient(top, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%); background: -ms-linear-gradient(top, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%); background: linear-gradient(to bottom, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%); z-index: 5; }
-
-.timeline li { padding: 1em 0; }
-
-.timeline li:after { content: ""; display: block; height: 0; clear: both; visibility: hidden; }
-
-.timeline .direction-l { position: relative; width: 300px; float: left; text-align: right; }
-
-.timeline .direction-r { position: relative; width: 300px; float: right; }
-
-.timeline .flag-wrapper { position: relative; display: inline-block; text-align: center; }
-
-.timeline .flag { position: relative; display: inline; background: #f8f8f8; padding: 6px 10px; border-radius: 5px; font-weight: 600; text-align: left; }
-
-.timeline .direction-l .flag { -webkit-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15); -moz-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15); box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15); }
-
-.timeline .direction-r .flag { -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15); -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15); box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15); }
-
-.timeline .direction-l .flag:before, .timeline .direction-r .flag:before { position: absolute; top: 50%; right: -40px; content: ' '; display: block; width: 12px; height: 12px; margin-top: -10px; background: #fff; border-radius: 10px; border: 4px solid #3e8abb; z-index: 10; }
-
-.timeline .direction-r .flag:before { left: -40px; }
-
-.timeline .direction-l .flag:after { content: ""; position: absolute; left: 100%; top: 50%; height: 0; width: 0; margin-top: -8px; border: solid transparent; border-left-color: #f8f8f8; border-width: 8px; pointer-events: none; }
-
-.timeline .direction-r .flag:after { content: ""; position: absolute; right: 100%; top: 50%; height: 0; width: 0; margin-top: -8px; border: solid transparent; border-right-color: #f8f8f8; border-width: 8px; pointer-events: none; }
-
-.timeline .time-wrapper { display: inline; line-height: 1em; font-size: 0.66666em; color: #3e8abb; vertical-align: middle; }
-
-.timeline .direction-l .time-wrapper { float: left; }
-
-.timeline .direction-r .time-wrapper { float: right; }
-
-.timeline .time { display: inline-block; padding: 4px 6px; background: #f8f8f8; }
-
-.timeline .desc { margin: 1em 0.75em 0 0; font-size: 0.77777em; font-style: italic; line-height: 1.5em; }
-
-.timeline .direction-r .desc { margin: 1em 0 0 0.75em; }
-
-/* ================ Timeline Media Queries ================ */
-@media screen and (max-width: 660px) { .timeline { width: 100%; padding: 4em 0 1em 0; }
-  .timeline li { padding: 2em 0; }
-  .timeline .direction-l, .timeline .direction-r { float: none; width: 100%; text-align: center; }
-  .timeline .flag-wrapper { text-align: center; }
-  .timeline .flag { background: white; z-index: 15; }
-  .timeline .direction-l .flag:before, .timeline .direction-r .flag:before { position: absolute; top: -30px; left: 50%; content: ' '; display: block; width: 12px; height: 12px; margin-left: -9px; background: #fff; border-radius: 10px; border: 4px solid #ff5050; z-index: 10; }
-  .timeline .direction-l .flag:after, .timeline .direction-r .flag:after { content: ""; position: absolute; left: 50%; top: -8px; height: 0; width: 0; margin-left: -8px; border: solid transparent; border-bottom-color: white; border-width: 8px; pointer-events: none; }
-  .timeline .time-wrapper { display: block; position: relative; margin: 4px 0 0 0; z-index: 14; }
-  .timeline .direction-l .time-wrapper { float: none; }
-  .timeline .direction-r .time-wrapper { float: none; }
-  .timeline .desc { position: relative; margin: 1em 0 0 0; padding: 1em; background: whitesmoke; -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2); -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2); box-shadow: 0 0 1px rgba(0, 0, 0, 0.2); z-index: 15; }
-  .timeline .direction-l .desc, .timeline .direction-r .desc { position: relative; margin: 1em 1em 0 1em; padding: 1em; z-index: 15; } }
-@media screen and (min-width: 400px) and (max-width: 660px) { .timeline .direction-l .desc, .timeline .direction-r .desc { margin: 1em 4em 0 4em; } }
-
-/*FIN CREAR OFERTAS*/
 /*# sourceMappingURL=styles.css.map */
