--- a/VLaboralWeb/fonts/style.css
+++ b/VLaboralWeb/fonts/style.css
@@ -1,72 +1,60 @@
 @font-face {
-    font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?l42xlv');
-    src:    url('fonts/icomoon.eot?l42xlv#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?l42xlv') format('truetype'),
-        url('fonts/icomoon.woff?l42xlv') format('woff'),
-        url('fonts/icomoon.svg?l42xlv#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?kbkoyn');
+  src:  url('fonts/icomoon.eot?kbkoyn#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?kbkoyn') format('truetype'),
+    url('fonts/icomoon.woff?kbkoyn') format('woff'),
+    url('fonts/icomoon.svg?kbkoyn#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-image:before {
-    content: "\e90d";
+  content: "\e90d";
 }
 .icon-bullhorn:before {
-    content: "\e91a";
+  content: "\e91a";
 }
 .icon-profile:before {
-    content: "\e923";
+  content: "\e923";
 }
 .icon-stack:before {
-    content: "\e92e";
+  content: "\e92e";
 }
 .icon-location:before {
-    content: "\e947";
-}
-.icon-location2:before {
-    content: "\e948";
+  content: "\e947";
 }
 .icon-clock:before {
-    content: "\e94e";
+  content: "\e94e";
 }
 .icon-calendar:before {
-    content: "\e953";
+  content: "\e953";
+}
+.icon-user:before {
+  content: "\e971";
 }
 .icon-spinner10:before {
-    content: "\e983";
-}
-.icon-stats-dots:before {
-    content: "\e99b";
-}
-.icon-clipboard:before {
-    content: "\e9b8";
-}
-.icon-download2:before {
-    content: "\e9c5";
+  content: "\e983";
 }
 .icon-earth:before {
-    content: "\e9ca";
+  content: "\e9ca";
 }
-.icon-exit:before {
-    content: "\ea14";
-}
-.icon-mail4:before {
-    content: "\ea86";
+.icon-cross:before {
+  content: "\ea0f";
 }
 
