--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -20,7 +20,7 @@
         </li>
         <!--fin desplegable-->
         <a href="#">
-            <li><span class="icon-earth icono_de"></span></li>
+            <li><span class="icon-earth icono_de" ui-sref="empresa.notificaciones"></span></li>
         </a>
         <a href="#">
             <li><span class="icon-mail4 icono_de"></span></li>
