--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -18,27 +18,63 @@
                 </md-menu-content>
             </md-menu>
         </li>
-        <!--fin desplegable-->
-        <a href="#">
-            <li><span class="icon-earth icono_de" ui-sref="empresa.notificaciones"></span></li>
-        </a>
-        <a href="#">
-            <li><span class="icon-mail4 icono_de"></span></li>
-        </a>
+        <!--fin desplegable-->        
+        <li>
+            <md-menu>
+                <!-- Trigger element is a md-button with an icon -->
+                <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
+                    <notification-icon animation="grow" count="notificaciones.all.length">
+                        <i class="fa fa-globe fa-2x"></i>
+                    </notification-icon>
+                </md-button>
+                <md-menu-content>
+                    <md-menu-item  ng-repeat="n in notificaciones.all">
+                        <h4>{{n.TipoNotificacion.Descripcion}}</h4>
+                        <md-button ng-click="doSomething()">Do Something</md-button>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </li>
+
+        <li>
+            <md-menu>                
+                <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
+                    <notification-icon animation="grow" count="1">
+                        <i class="fa fa-comments fa-2x"></i>
+                    </notification-icon>
+                </md-button>
+                <md-menu-content>
+                    <md-menu-item>
+                        
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </li>
         <li>
             <span class="ic_m"></span><h6><a ui-sref="empresa.perfil({idEmpresa: authentication.empresaId})">{{authentication.userName}}</a></h6>
         </li>
-        <a ng-click="logOut()">
-            <li><span class="icon-exit icono_de"></span></li>
-        </a>                
-    </ul>
-    <h1>Seccion de Notificaciones</h1>
-    <ul id="discussion">
-        <li ng-repeat="n in notificaciones.all"><strong>{{n.Mensaje}} - {{n.TipoNotificacionId}}</li>
-    </ul>
+        <li>
+            <a ng-click="logOut()">
+                <span class="icon-exit icono_de"></span>
+           </a>                
+        </li>        
+    </ul>    
 </nav>
 <!--<aside ui-view="menu@"></aside>-->
 
+<md-menu>
+    <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open some menu">
+        <md-icon md-menu-origin md-svg-icon="call:phone"></md-icon>
+    </md-button>
+    <md-menu-content>
+        <md-menu-item>
+            <md-button ng-click="doSomething()" aria-label="Do something">
+                <md-icon md-menu-align-target md-svg-icon="call:phone"></md-icon>
+                Do Something
+            </md-button>
+        </md-menu-item>
+    </md-menu-content>
+</md-menu>
 
 <div ui-view="contenido@"></div>
 
