agrego funciones para enviar notificaciones de nuevas experiencia cargadas por el profesional y modifico el modal de nueva experiencia agregando ngAutocomplete para la ubicacion

--- a/VLaboralWeb/App/ExperienciasLaborales/Partials/nuevaExperiencia.html
+++ b/VLaboralWeb/App/ExperienciasLaborales/Partials/nuevaExperiencia.html
@@ -28,10 +28,9 @@
                     </md-item-template>                    
                 </md-autocomplete>
             </div>
-            <div flex>
+            <div flex>                
                 <md-input-container>
-                    <label>Ubicacion</label>
-                    <input ng-model="exp.Ubicacion" />
+                    <input type="text" ng-autocomplete ng-model="exp.Ubicacion" options="options" details="details" />                    
                 </md-input-container>
             </div>
             <div flex>
