--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -1,5 +1,5 @@
 ﻿<nav>
-    <a href="index.html">UN<span>MUNDO</span></a>
+    <a>UN<span>MUNDO</span></a>
     <ul>
 
         <!-- desplegable: ezequiel-->
@@ -18,10 +18,10 @@
                 </md-menu-content>
             </md-menu>
         </li>
-        <!--fin desplegable-->        
+        <!--fin desplegable-->    
+            
         <li>
-            <md-menu>
-                <!-- Trigger element is a md-button with an icon -->
+            <md-menu>                
                 <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
                     <notification-icon animation="grow" count="notificaciones.all.length">
                         <i class="fa fa-globe fa-2x"></i>
@@ -35,12 +35,11 @@
                 </md-menu-content>
             </md-menu>
         </li>
-
         <li>
             <md-menu>                
                 <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
                     <notification-icon animation="grow" count="1">
-                        <i class="fa fa-comments fa-2x"></i>
+                        <i class="fa fa-comment fa-2x"></i>
                     </notification-icon>
                 </md-button>
                 <md-menu-content>
@@ -51,30 +50,28 @@
             </md-menu>
         </li>
         <li>
-            <span class="ic_m"></span><h6><a ui-sref="empresa.perfil({idEmpresa: authentication.empresaId})">{{authentication.userName}}</a></h6>
-        </li>
-        <li>
-            <a ng-click="logOut()">
-                <span class="icon-exit icono_de"></span>
-           </a>                
+            <md-menu>
+                <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
+                    <i class="fa fa-user fa-2x"></i>
+                </md-button>
+                <md-menu-content>
+                    <md-menu-item>
+                        <md-button class="md-primary" ui-sref="empresa.perfil({idEmpresa: authentication.empresaId})" >{{authentication.userName}}</md-button>                        
+                    </md-menu-item>                    
+                    <md-menu-item>                        
+                        <md-button ng-click="logOut()">       
+                            <i class="fa fa-sign-out"></i>                     
+                            &nbsp;Cerrar Sesion
+                        </md-button>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+
         </li>        
     </ul>    
 </nav>
 <!--<aside ui-view="menu@"></aside>-->
 
-<md-menu>
-    <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open some menu">
-        <md-icon md-menu-origin md-svg-icon="call:phone"></md-icon>
-    </md-button>
-    <md-menu-content>
-        <md-menu-item>
-            <md-button ng-click="doSomething()" aria-label="Do something">
-                <md-icon md-menu-align-target md-svg-icon="call:phone"></md-icon>
-                Do Something
-            </md-button>
-        </md-menu-item>
-    </md-menu-content>
-</md-menu>
 
 <div ui-view="contenido@"></div>
 
