--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -32,6 +32,9 @@
                         <h4>{{n.TipoNotificacion.Descripcion}}</h4>
                         <md-button ng-click="doSomething()">Do Something</md-button>
                     </md-menu-item>
+                    <md-menu-item>                        
+                        <a ui-sref="empresa.centroNotificaciones">Ver Todas</a>
+                    </md-menu-item>
                 </md-menu-content>
             </md-menu>
         </li>
