--- a/VLaboralWeb/App/Postulantes/Partials/listadoPostulantes.html
+++ b/VLaboralWeb/App/Postulantes/Partials/listadoPostulantes.html
@@ -86,7 +86,7 @@
                         {{postulante.Valoracion}}
                     </td>
                     <td md-cell>
-                        <md-button ng-click="postulanteDetalle(postulante.Id)">
+                        <md-button ng-click="postulanteDetalle(postulante.Profesional.Id)">
                             <md-icon style="color:forestgreen;" md-svg-src="svg/eye.svg"></md-icon>
                         </md-button>
                     </td>
