cambios en centro de notificaciones

--- a/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
+++ b/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
@@ -5,7 +5,7 @@
                 <div layout="row">
                     <div flex>
                         <div class="n_centro">
-                            <md-content style="height: 600px;" md-theme="altTheme">
+                            <md-content style="height: 600px;">
                                 <md-subheader class="md-primary">Notificaciones</md-subheader>
                                 <md-list layout-padding>
                                     <md-list-item class="md-3-line" ng-repeat="n in notificaciones">
@@ -42,7 +42,7 @@
                 <div layout="row">
                     <div flex>
                         <div class="n_centro">
-                            <md-content style="height: 600px;" md-theme="altTheme">
+                            <md-content style="height: 600px;">
                                 <md-subheader class="md-primary">Nuevas Experiencias</md-subheader>
                                 <md-list layout-padding>
                                     <md-list-item class="md-3-line" ng-repeat="n in notificaciones | filterBy: ['TipoNotificacion.Valor']: 'EXP'">
@@ -79,7 +79,7 @@
                 <div layout="row">
                     <div flex>
                         <div class="n_centro">
-                            <md-content style="height: 600px;" md-theme="altTheme">
+                            <md-content style="height: 600px;">
                                 <md-subheader class="md-primary">Nuevas Postulaciones</md-subheader>
                                 <md-list layout-padding>
                                     <md-list-item class="md-3-line" ng-repeat="n in notificaciones | filterBy: ['TipoNotificacion.Valor']: 'POS'">
